--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Recording Event From Web View</h1>
         <div id="main">
-            <button id="recordEvent" onclick="recordEvent()">Record Event</button>
+            <button id="recordEvent" onclick="recordEvent()">Record Purchase Event</button>
         </div>
     <script type="text/javascript">
         function recordEvent() {
