--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Recording Event From Web View</h1>
+    <h1>Recording Event From Web View - JavaScript Interface</h1>
         <div id="main">
             <button id="recordEvent" onclick="recordEvent()">Record Purchase Event</button>
         </div>
