--- a/jsinterface.html
+++ b/jsinterface.html
@@ -9,8 +9,9 @@
 
 <body>
     <h1>Recording Event From Web View - JavaScript Interface</h1>
-        <div id="main">
-            <button id="recordEvent" onclick="recordEvent()">Record Purchase Event</button>
+        <div>
+            <button id="recordEvent" onclick="recordEvent()">Record Purchase Event</button><br><br>
+            <button onclick="window.history.back()" type="button">Go back</button>
         </div>
     <script type="text/javascript">
         function recordEvent() {
