--- a/urlloading.html
+++ b/urlloading.html
@@ -9,8 +9,9 @@
 
 <body>
     <h1>Recording Event From Web View - URL Loading</h1>
-        <div id="main">
-          <button id="cartButton">Record "Add to cart" Event</button>
+        <div>
+            <button id="cartButton">Record "Add to cart" Event</button><br><br>
+            <button onclick="window.history.back()" type="button">Go back</button>
         </div>
     <script type="text/javascript">
       function recordEvent(eventName,eventValue) {
