--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <input type="text" id="webDevKey" name="webDevKey"><br>
       <input type="submit" value="Submit">
     </form><br>
-    <button onclick="location.href='https://luvgaram.github.io/webviewsample.github.io/jsinterface.html'" type="button">
+    <button onclick="location.href='jsinterface.html'" type="button">
         Visit WebView - JavaScriptInterface 
     </button><br><br>
-    <button onclick="location.href='https://luvgaram.github.io/webviewsample.github.io/urlloading.html'" type="button">
+    <button onclick="location.href='urlloading.html'" type="button">
         Visit WebView - URLLoading
     </button>
 
