--- a/jsinterface.html
+++ b/jsinterface.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <img src="appsflyer_logo.png" alt="logo"><br>
     <h1>Record Event From Web View - JavaScript Interface</h1>
         <div>
             <button id="recordEvent" onclick="recordEvent()">Record Purchase Event</button>
