--- a/urlloading.html
+++ b/urlloading.html
@@ -8,45 +8,46 @@
 </head>
 
 <body>
+    <img src="appsflyer_logo.png" alt="logo"><br>
     <h1>Record Event From Web View - URL Loading</h1>
     <div>
         <button id="cartButton">Record "Add to cart" Event</button>
     </div>
     <h1>PBA Web SDK Test</h1>
     <form id="webDevKeyForm">
-      <label for="webDevKey">WEB_DEV_KEY:</label><br>
-      <input type="text" id="webDevKey" name="webDevKey"><br>
-      <input type="submit" value="Submit">
+        <label for="webDevKey">WEB_DEV_KEY:</label><br>
+        <input type="text" id="webDevKey" name="webDevKey"><br>
+        <input type="submit" value="Submit">
     </form>
-    
+  
     <script type="text/javascript">
-      function recordEvent(eventName,eventValue) {
-        var iframe = document.createElement("IFRAME");
-        iframe.setAttribute("src", "af-event://inappevent?eventName="+eventName+"&eventValue="+eventValue);
-        document.documentElement.appendChild(iframe);
-        iframe = null;
-      }
-      var cartButton = document.getElementById("cartButton");
-      cartButton.onclick = function(event) {
+        function recordEvent(eventName,eventValue) {
+            var iframe = document.createElement("IFRAME");
+            iframe.setAttribute("src", "af-event://inappevent?eventName="+eventName+"&eventValue="+eventValue);
+            document.documentElement.appendChild(iframe);
+            iframe = null;
+        }
+        var cartButton = document.getElementById("cartButton");
+        cartButton.onclick = function(event) {
         var eventName = "af_add_to_cart";
         var eventValue = "{\"af_price\":\"9.99\", \"af_content_type\": \"url-loading\", \"af_content_id\": \"54321\", \"af_content\": \"item54321\", \"af_quantity\": \"1\"}";
         recordEvent(eventName, eventValue);
-      }
+        }
 
-      document.getElementById('webDevKeyForm').addEventListener('submit', function(e) {
-          e.preventDefault(); // Prevents form from refreshing page
-          let webDevKey = document.getElementById('webDevKey').value;
+        document.getElementById('webDevKeyForm').addEventListener('submit', function(e) {
+            e.preventDefault(); // Prevents form from refreshing page
+            let webDevKey = document.getElementById('webDevKey').value;
           
-          if (!(/iOS_WebView|Android_WebView/.test(navigator.userAgent))) {
-              !function(t,e,n,s,a,c,i,o,p){t.AppsFlyerSdkObject=a,t.AF=t.AF||function(){
-                  (t.AF.q=t.AF.q||[]).push([Date.now()].concat(Array.prototype.slice.call(arguments)))},
-                  t.AF.id=t.AF.id||i,t.AF.plugins={},o=e.createElement(n),p=e.getElementsByTagName(n)[0],o.async=1,
-                  o.src="https://websdk.appsflyer.com?"+(c.length>0?"st="+c.split(",").sort().join(",")+"&":"")+(i.length>0?"af_id="+i:""),
-                  p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF","pba",{pba: {webAppId: webDevKey}})
-          } else {
+            if (!(/iOS_WebView|Android_WebView/.test(navigator.userAgent))) {
+                !function(t,e,n,s,a,c,i,o,p){t.AppsFlyerSdkObject=a,t.AF=t.AF||function(){
+                    (t.AF.q=t.AF.q||[]).push([Date.now()].concat(Array.prototype.slice.call(arguments)))},
+                    t.AF.id=t.AF.id||i,t.AF.plugins={},o=e.createElement(n),p=e.getElementsByTagName(n)[0],o.async=1,
+                    o.src="https://websdk.appsflyer.com?"+(c.length>0?"st="+c.split(",").sort().join(",")+"&":"")+(i.length>0?"af_id="+i:""),
+                    p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF","pba",{pba: {webAppId: webDevKey}})
+            } else {
               console.log("The script can't be executed inside an iOS WebView or Android WebView environment.");
-          }
-      });
+            }
+        });
     </script>
 </body>
 
