--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <img src="appsflyer_logo.png" alt="logo"><br>
     <h1>PBA Web SDK + WebView Example</h1>
     <button onclick="location.href='jsinterface.html'" type="button">
         Visit WebView - JavaScriptInterface 
